# nautilus-follow-symlink

./: .gitignore  AUTHORS  BUILD  ChangeLog  INSTALL  Makefile.am  README.md  configure.ac  configure.in  dist  dist.mk  nautilus-follow-symlink.spec.in
.forgejo/workflows/: ci-build.yaml  package-tagged-releases.yaml
.github/workflows/: ci-build.yaml
caja/: .gitignore  AUTHORS  ChangeLog  INSTALL  LGPL  Makefile.am  README  bootstrap.sh  caja-follow-symlink.spec.in  configure.ac  kludges
caja/debian/: README.Debian  changelog  compat  control  copyright  dirs  docs  rules
caja/po/: ChangeLog  POTFILES.in  ca.po  es.po
caja/src/: Makefile.am  common.h  follow-symlink.c  follow-symlink.h  layer.h  nautilus-ext-follow-symlink.c  nautilus-ext-follow-symlink.h  refresh-layer.bash
caja/src/caja-layer/libnautilus-extension/: nautilus-menu-provider.h
debian/: README.Debian  changelog  control  copyright  docs  rules
nautilus/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  bootstrap.sh  configure.ac  nautilus-follow-symlink.spec.in
nautilus/debian/: changelog  control  copyright  rules
nautilus/kludges/: README  libtool-honor-as-needed.patch
nautilus/po/: ChangeLog  POTFILES.in  ca.po  es.po
nautilus/src/: Makefile.am  common.h  follow-symlink.c  follow-symlink.h  nautilus-ext-follow-symlink.c  nautilus-ext-follow-symlink.h
po/: ca.po  es.po  libnautilus-follow-symlink.pot  nautilus-follow-symlink.pot
src/: Makefile  Makefile.am  common.h  follow-symlink.c  follow-symlink.h  nautilus-ext-follow-symlink.c  nautilus-ext-follow-symlink.h
