
SUBDIRS = po src

# This doesn't work as expected
libdir = @libdir@/nautilus/extensions-1.0

#EXTRA_DIST = dist

# Extra files to get rid of when distcleaning
DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update \
	\
	libtool \
	libtool.m4 \
	ltmain.sh \
	ltoptions.m4 \
	ltsugar.m4 \
	ltversion.m4 \
	\
	po/Makefile.in.in
